--- a/package.json
+++ b/package.json
@@ -1,29 +1,83 @@
 {
-  "name": "REPLACE_ME",
-  "description": "REPLACE_ME",
-  "author": "REPLACE_ME",
-  "license": "MIT",
-  "version": "1.0.0",
-  "publisher": "REPLACE_ME",
-  "categories": [],
-  "engines": {
-    "vscode": "^1.75.0"
-  },
-  "activationEvents": [
-    "onLanguage"
-  ],
-  "main": "./client/out/extension",
-  "contributes": {
-    "configuration": {}
-  },
-  "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -b",
-    "watch": "tsc -b -w",
-    "postinstall": "cd client && npm install && cd ../server && npm install && cd .."
-  },
-  "devDependencies": {
-    "@types/node": "^20.5.7",
-    "typescript": "^5.2.2"
-  }
+	"name": "zura-lsp",
+	"description": "Zura Language Server and Syntax Highlighter",
+	"author": "TheDevConnor & SovietPancakes",
+	"license": "MIT",
+	"version": "1.0.0",
+	"publisher": "TheDevConnor",
+	"categories": [],
+	"keywords": [
+		"multi-root ready"
+	],
+	"engines": {
+		"vscode": "^1.75.0"
+	},
+	"main": "./client/out/extension",
+	"contributes": {
+		"grammars": [
+			{
+				"language": "zura",
+				"scopeName": "source.zu",
+				"path": "./syntaxes/zura.tmLanguage.json"
+			}
+		],
+		"debuggers": [
+			{
+				"type": "zura",
+				"label": "Zura Language Server",
+				"runtime": "REPLACE WITH ZURA PATH",
+				"program": "REPLACE WITH ZURA PATH",
+				"args": ["--debugger"],
+				"deprecated": "",
+				"hiddenWhen": "",
+				"languages": ["zura"],
+				"linux": {
+					"runtime": "REPLACE WITH ZURA PATH"
+				},
+				"when": "",
+				"variables": {},
+				"strings": {},
+				"initialConfigurations": [],
+				"configurationAttributes": {},
+				"configurationSnippets": []
+			}
+		],
+		"languages": [
+			{
+				"id": "zura",
+				"aliases": [
+					"Zura",
+					"zura"
+				],
+				"extensions": [
+					".zura",
+					".zu"
+				],
+				"filenames": [
+					"zura"
+				],
+				"configuration": "./language-configuration.json"
+			}
+		]
+	},
+	"activationEvents": [
+		"onLanguage:zura"
+	],
+	"scripts": {
+		"vscode:prepublish": "npm run compile",
+		"compile": "tsc -b",
+		"watch": "tsc -b -w",
+		"lint": "eslint",
+		"postinstall": "cd client && npm install && cd .."
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.13.0",
+		"@stylistic/eslint-plugin": "^2.9.0",
+		"@types/mocha": "^10.0.6",
+		"@types/node": "^20",
+		"eslint": "^9.13.0",
+		"mocha": "^10.3.0",
+		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.16.0"
+	}
 }
