added a new command pallete option for restarting the server

--- a/package.json
+++ b/package.json
@@ -21,27 +21,11 @@
 				"path": "./syntaxes/zura.tmLanguage.json"
 			}
 		],
-		"debuggers": [
-			{
-				"type": "zura",
-				"label": "Zura Language Server",
-				"runtime": "zura",
-				"program": "zura",
-				"args": ["--debugger"],
-				"deprecated": "",
-				"hiddenWhen": "",
-				"languages": ["zura"],
-				"linux": {
-					"runtime": "zura"
-				},
-				"when": "",
-				"variables": {},
-				"strings": {},
-				"initialConfigurations": [],
-				"configurationAttributes": {},
-				"configurationSnippets": []
-			}
-		],
+    "commands": [{
+      "command": "zura.restartServer",
+      "title": "Restart Zura LSP",
+      "category": "Zura"
+    }],
 		"languages": [
 			{
         "icon": {
