--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,6 @@
     ".vscode-test"
   ],
   "references": [
-    { "path": "./client" },
-    { "path": "./server" }
+    { "path": "./client" }
   ]
 }
